Add Phase 11c: Substrait module with type and expression converters
Add substrait module (io.substrait:core:0.78.0) with converters for
ProtoCatalyst IR → Substrait IR. Types and literals fully working;
scalar functions documented as blocked by Substrait's YAML-based
extension system complexity.

- SubstraitTypeConverter: all primitive, complex, and temporal types (19 tests)
- SubstraitExprConverter: literals, Cast, Alias; functions stubbed (24 tests)
- SubstraitFunctionRegistry: function name mapping with documented blocker
- ADR-003: detailed technical comparison of ProtoCatalyst vs Substrait IR
- Updated ROADMAP.md with Phase 11c status and metrics

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>